--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -17,7 +17,7 @@ jobs:
       build-output-dirs: '.next/,public/'
       dockerfile-path: './Dockerfile'
       docker-context: '.'
-      registry: 'ghcr.io'
+      registry: 'docker.io'
       image-name: 'praxis-innovations-website'
       port: '3000'
       yarn-version: '1.x'
